// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Контентные опции Конетная опция не поменялась после _forceUpdate: 1.построилось 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    >
      Содержимое "ребенка", в который передали опции объектом из wml-шаблона родителя
    </div>
    <div>
      Опции остались те же - 
    </div>
  </div>
</div>
`;

exports[`Контентные опции Конетная опция не поменялась после _forceUpdate: 2.после _forceUpdate 1`] = `
<div>
  <div
    tabindex="0"
  >
    <div
      tabindex="0"
    >
      Содержимое "ребенка", в который передали опции объектом из wml-шаблона родителя
    </div>
    <div>
      Опции остались те же - ДА
    </div>
  </div>
</div>
`;
